sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: ')' expected but '}' found.
                     echange(i,(i+1)}
                                    ^